# aws-lambda-ml

./: .gitignore  LICENSE  README.md  cdk.json  cdk.py  pyproject.toml
captioning_lambda/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
cdk/: ml_stack.py
